Replace Unsafe.invokeCleaner() with FileChannelImpl.unmap()
Avoids JRE warning